Navbar scaleX flickering fixed

--- a/styles/components/Navbar.module.scss
+++ b/styles/components/Navbar.module.scss
@@ -1,6 +1,6 @@
-@import '../variables';
-@import '../animations';
-@import '../page';
+@import "../variables";
+@import "../animations";
+@import "../page";
 
 .navbar {
   position: sticky;
@@ -59,11 +59,11 @@
 
     &::after {
       position: absolute;
-      content: '';
+      content: "";
       background-color: $text-dark;
       width: 100%;
       height: 0.5rem;
-      bottom: 3rem;
+      top: 9rem;
       left: 0;
       transition: all 0.3s;
       transform-origin: left;
